[package]
name = "tarpatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
filetime = "0.2.23"
flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha1 = "0.10.6"
tar = "0.4.40"
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
